RESOLVED FIXED106719
[BlackBerry] Focus zoom animation doesn't occur on devices with physical keyboard
https://bugs.webkit.org/show_bug.cgi?id=106719
Summary [BlackBerry] Focus zoom animation doesn't occur on devices with physical keyb...
Andrew Lo
Reported 2013-01-11 16:25:15 PST
When focusing on an input field, zoom animation doesn't occur on devices with physical keyboard.
Attachments
Patch (2.16 KB, patch)
2013-01-11 16:57 PST, Andrew Lo
no flags
Andrew Lo
Comment 1 2013-01-11 16:57:02 PST
WebKit Review Bot
Comment 2 2013-01-11 17:51:19 PST
Comment on attachment 182448 [details] Patch Clearing flags on attachment: 182448 Committed r139530: <http://trac.webkit.org/changeset/139530>
WebKit Review Bot
Comment 3 2013-01-11 17:51:23 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.