[BlackBerry] Focus zoom animation doesn't occur on devices with physical keyboard https://bugs.webkit.org/show_bug.cgi?id=106719

Patch by Andrew Lo <anlo@rim.com> on 2013-01-11
Reviewed by Yong Li.
Internally reviewed by Mike Fenton.

Internal PR 278687

Always ensureFocusTextElementVisible if an element is focused when
the device has a physical keyboard.

* WebKitSupport/InputHandler.cpp:
(BlackBerry::WebKit::InputHandler::setElementFocused):

git-svn-id: svn://svn.chromium.org/blink/trunk@139530 bbb929c8-8fbe-4397-9dbb-9b2b20218538