third_party/WebKit/Source/WebKit/blackberry/WebKitSupport/InputHandler.cpp
@@ -65,6 +65,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "htmlediting.h"
 #include "visible_units.h"
 
+#include <BlackBerryPlatformDeviceInfo.h>
 #include <BlackBerryPlatformIMF.h>
 #include <BlackBerryPlatformKeyboardEvent.h>
 #include <BlackBerryPlatformLog.h>
@@ -901,7 +902,8 @@ void InputHandler::setElementFocused(Element* element)
         frame->selection()->setFocused(isInputModeEnabled());
 
     // Ensure visible when refocusing.
-    m_shouldEnsureFocusTextElementVisibleOnSelectionChanged = isActiveTextEdit();
+    // If device does not have physical keyboard, wait to ensure visible until VKB resizes viewport so that both animations are combined into one.
+    m_shouldEnsureFocusTextElementVisibleOnSelectionChanged = isActiveTextEdit() || DeviceInfo::instance()->hasPhysicalKeyboard();
 
     // Clear the existing focus node details.
     setElementUnfocused(true /*refocusOccuring*/);
